# revelio

./: README.md  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js
.run/: Dev (Core).run.xml  Dev (UI).run.xml  Dev.run.xml
src/: App.tsx  bindings.ts  main.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/utils/: cpu.rs  disks.rs  displays.rs  gpus.rs  mod.rs  network.rs  platform.rs  sysinfo.rs  usb.rs  vulkan.rs
src-tauri/src/utils/gpu/: directx.rs  metal.rs  mod.rs  opengl.rs  vulkan.rs
src-tauri/src/utils/gpus/: vulkan.rs
src-tauri/src/utils/linux/: vulkan.rs
src/components/: DirectXInfo.tsx  MetalInfo.tsx  ThemeSwitcher.tsx  ViewContainer.tsx  VulkanInfo.tsx
src/views/: Cpu.tsx  Displays.tsx  Gpu.tsx  Network.tsx  Platform.tsx  Storage.tsx  USB.tsx  cpu.tsx  gpu.tsx  network.tsx  platform.tsx  storage.tsx
