[package]
name = "revelio"
version = "0.1.0"
description = "Cross-platform system information viewer"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com>"]
edition = "2021"
rust-version = "1.77.2"

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "revelio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32.0"
thiserror = "1.0.64"
phf = "0.11.2"
hex = "0.4.3"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
log = "0.4.22"
glium = "0.36.0"

[target.'cfg(not(all(target_os = "macos", target_arch = "aarch64")))'.dependencies]
ash = "0.38.0"

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "22.1.0", default-features = false, features = ["dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29.0"
num-format = "0.4.4"

[target.'cfg(target_os = "linux")'.dependencies]
os-release = "0.1.0"
